--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,18 +3,19 @@
 <head>
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+
   <title>Дом Наркомфина</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
   <script src="javascripts/sidebar.js" charset="utf-8"></script>
-
 </head>
 <body>
 
   <nav class="menubar">
 
     <a class="logo" href="#"></a>
-    <a href="#">О проекте</a>
+    <a class="proekt" href="#">О проекте</a>
 
   </nav>
 
@@ -92,6 +93,32 @@
 
     <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
+    <div class="chevron">
+      <div></div>
+      <div></div>
+
+    </div>
+
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" />
+    <img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" />
+
+
     <h2 id="s2">История создания</h2>
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса</p>
 
@@ -161,6 +188,7 @@
     <p>Успешно функционировали только два коммунальных хозяйственно-бытовых учреждения: прачечная и детский сад (в коммунальном корпусе).</p>
     <p>Как пишут авторы монографии советского периода (1986), посвященной Дому Наркомфина: «Таким образом эксперимент с организацией новых форм ведения социально-бытового хозяйства для начала 1930-х годов был преждевременным и оказался несостоятельным».</p>
     <p>В английском разделе Википедии данная мысль (<a target="_blank" href="https://en.wikipedia.org/wiki/Narkomfin_building#The_Narkomfin_building_as_reality">«Дом Наркомфина как реальность»</a>) выражена точнее: «Утопизм и стремление к реформированию повседневной жизни, положенные в основу проекта дома Наркомфина, впали в немилость практически сразу по его завершении. С началом <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%80%D0%B2%D0%B0%D1%8F_%D0%BF%D1%8F%D1%82%D0%B8%D0%BB%D0%B5%D1%82%D0%BA%D0%B0">пятилетки</a> и консолидации власти Сталиным заложенные идеи коллективизма и феминизма были отвергнуты как левацкие и троцкистские».</p>
+
 
     <h2 id="s6">Известные жители</h2>
     <p>Дом заселялся в 1931 году, одновременно с заселением <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%94%D0%BE%D0%BC_%D0%BD%D0%B0_%D0%BD%D0%B0%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%BD%D0%BE%D0%B9">Дома на набережной</a>, ул. Серафимовича, д. 2, представителями советской номенклатуры республиканского уровня — чиновниками и функционерами второй руки. Наиболее заметные из них по своему положению занимали квартиры в верхних этажах и в торцах жилого корпуса. Позднее, в 1937—1938 годах, практически все они были осуждены и расстреляны как «враги народа» (см. Ссылки).</p>
