--- a/narkomfin.html
+++ b/narkomfin.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
@@ -84,6 +85,32 @@
       <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение»</p>
 
       <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
+
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" />
+
+      <div class="chevron">
+        <div></div>
+        <div></div>
+      </div>
+      
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" />
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" />
+
 
       <h2 id="s2">История создания</h2>
 
