--- a/narkomfin.html
+++ b/narkomfin.html
@@ -2,6 +2,7 @@
 <html lang="eu">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
@@ -15,7 +16,7 @@
     <nav class="sidebar">
       <ul>
         <li>
-          <a href="#s1">Дом Наркомфина – жилой дом переходного типа</a>
+          <a href="#s1">Дом Наркомфина</a>
         </li>
 
         <li>
@@ -79,9 +80,34 @@
       <h1 id="s1">Дом Наркомфина</h1>
       <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
       <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
+      <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+
+      <div class="chevron">
+        <div></div>
+        <div></div>
+      </div>
+
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" alt="">
+      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" alt="">
+
       <h2 id="s2">История создания</h2>
       <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
-      <img src="images/narkomfin.jpg" alt="Дом наркомфина">
 
       <h2 id="s3">Идеология</h2>
       <p>Несмотря на то, что дом Наркомата финансов часто именуется «домом-коммуной», автор проекта М. Гинзбург считал его «домом переходного типа» (от «буржуазного» дома к «социалистической» коммуне), поскольку в нём не полностью уничтожалась семейная структура, как это предполагалось в домах-коммунах. Называя его так, Гинзбург имел в виду, что обитатели оценят удобства общественного обслуживания и постепенно перейдут к новому бытовому укладу.</p>
