--- a/narkomfin.html
+++ b/narkomfin.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js" charset="utf-8"></script>
+    <script src="javascripts/gallery.js" charset="utf-8"></script>
   </head>
   <body>
 
@@ -86,31 +87,38 @@
 
       <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
-      <div class="chevron">
 
-        <div></div>
-        <div></div>
+      <section class="gallery">
+        <nav class="galleryNav">
+          <div class="disabled" id="prev"></div>
+          <div id="next"></div>
+        </nav>
 
-      </div>
+        <section class="galleryRail">
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" /></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" /></figure>
+        </section>
 
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg" />
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg" />
+        <figcaption>
+          <a href="http://tema.livejournal.com/1389928.html" target="_blank">фотки Тёмы Лебедева</a>
+        </figcaption>
+      </section>
 
 
       <h2 id="s2">История создания </h2>
