--- a/narcomfin.html
+++ b/narcomfin.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javaskripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javaskripts/sidebar.js" charset="utf-8"></script>
+    <script src="javaskripts/gallery.js" charset="utf-8"></script>
   </head>
 
 
@@ -94,29 +95,41 @@
 
       <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
-      <div class="chevron">
-        <div></div>
-        <div></div>
-      </div>
 
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg"/>
-      <img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg"/>
+      <section class="gallery">
+        <nav class="galleryNav">
+          <div class="chevron" id="prev"></div>
+          <div class="disabled">
+
+          </div>
+          <div class="chevron" id="next"></div>
+        </nav>
+
+
+        <section class="galleryRail">
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0395.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0418.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0416.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0519.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0424.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0429.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0505.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0502.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0444.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0456.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0533.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0539.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0508.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0547.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0544.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0559.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0617.jpg"/></figure>
+          <figure><img src="http://www.tema.ru/jjj/narcomfin/4F2C0594.jpg"/></figure>
+        </section>
+        <figcaption>
+          <a target="_b" href="http://tema.livejournal.com/1389928.html">Фотки Темки Лебедева</a>
+        </figcaption>
+      </section>
 
 
 
@@ -239,3 +252,4 @@
    </article>
   </body>
 </html>
+<figure></figure>
