--- a/anastasiazalesova/centrosouz.html
+++ b/anastasiazalesova/centrosouz.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+
     <title>Здание Центросоюза</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js"> charset="utf-8"></script>
+    <script src="javascripts/gallery.js"> charset="utf-8"></script>
   </head>
   <body>
+
+    <nav class="menubar">
+      <a class="logo" href="#"></a>
+      <a href="#">О проекте</a>
+    </nav>
 
     <nav class="sidebar">
       <ul>
